test comment added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     
 </head>
 <body onload="init()">
+    <!--Test comment added -->
     <header>
         <div class="header-logo">
             <a href="index.html"><img src="img/pokeball.png" alt="pokeball"></a>
