--- a/index.html
+++ b/index.html
@@ -40,7 +40,12 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="script.js"></script>
+    <script src="config.js"></script>
+    <script src="api.js"></script>
+    <script src="ui.js"></script>
+    <script src="navigation.js"></script>
+    <script src="loadMore.js"></script>
+    <script src="utils.js"></script>
     <script src="html_templates.js"></script>
     <script src="chart.js"></script>
     <link rel="stylesheet" href="pokemonColors.css">
