feat: refactoring and restructuring of the whole project

--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex</title>
     <link rel="icon" type="image/x-icon" href="img/pokeball.png">
-    <link rel="stylesheet" href="style.css">
-    
-    
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body onload="init()">
+<body>
     <header>
         <div class="header-logo">
             <a href="index.html"><img src="img/pokeball.png" alt="pokeball"></a>
@@ -40,14 +38,14 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="config.js"></script>
-    <script src="api.js"></script>
-    <script src="ui.js"></script>
-    <script src="navigation.js"></script>
-    <script src="loadMore.js"></script>
-    <script src="utils.js"></script>
-    <script src="html_templates.js"></script>
-    <script src="chart.js"></script>
-    <link rel="stylesheet" href="pokemonColors.css">
+    <script src="javascript/config.js"></script>
+    <script src="javascript/api.js"></script>
+    <script src="javascript/ui.js"></script>
+    <script src="javascript/navigation.js"></script>
+    <script src="javascript/loadMore.js"></script>
+    <script src="javascript/utils.js"></script>
+    <script src="javascript/html_templates.js"></script>
+    <script src="javascript/chart.js"></script>
+    <link rel="stylesheet" href="css/pokemonColors.css">
 </body>
 </html>
